--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://assets.oasis.io/logotypes/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xmas Roffle</title>
+    <title>Oasis Bridge</title>
 
     <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Join the Xmas Roffle - A festive blockchain raffle powered by Oasis Network. Participate and win amazing prizes this holiday season!"
+      content="Bridge stablecoins from Base, Arbitrum, and Ethereum to receive ROSE on Oasis Sapphire."
     />
     <meta
       name="keywords"
-      content="xmas roffle, blockchain raffle, crypto giveaway, Oasis Network, holiday raffle, web3 raffle"
+      content="oasis bridge, cross-chain bridge, ROSE, stablecoins, Oasis Network, Sapphire, web3 bridge"
     />
     <meta name="author" content="Oasis Network" />
     <meta name="theme-color" content="#000000" />
@@ -21,21 +21,21 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://roffle.oasis.io/" />
-    <meta property="og:title" content="Xmas Roffle - Blockchain Holiday Raffle" />
+    <meta property="og:title" content="Oasis Bridge" />
     <meta
       property="og:description"
-      content="Join the Xmas Roffle - A festive blockchain raffle powered by Oasis Network. Participate and win amazing prizes this holiday season!"
+      content="Bridge stablecoins from Base, Arbitrum, and Ethereum to receive ROSE on Oasis Sapphire."
     />
     <meta property="og:image" content="https://roffle.oasis.io/og-image.png" />
-    <meta property="og:site_name" content="Xmas Roffle" />
+    <meta property="og:site_name" content="Oasis Bridge" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://roffle.oasis.io/" />
-    <meta name="twitter:title" content="Xmas Roffle - Blockchain Holiday Raffle" />
+    <meta name="twitter:title" content="Oasis Bridge" />
     <meta
       name="twitter:description"
-      content="Join the Xmas Roffle - A festive blockchain raffle powered by Oasis Network. Participate and win amazing prizes this holiday season!"
+      content="Bridge stablecoins from Base, Arbitrum, and Ethereum to receive ROSE on Oasis Sapphire."
     />
     <meta name="twitter:image" content="https://roffle.oasis.io/twitter.png" />
     <meta name="twitter:creator" content="@OasisProtocol" />
